--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -54,6 +54,9 @@ MEMORY
 #ifdef S_RAM_CODE_START
   CODE_RAM (rwx) : ORIGIN = S_RAM_CODE_START, LENGTH = S_RAM_CODE_SIZE
 #endif
+#ifdef S_RUNTIME_ITCM_START
+  ITCM     (rx)  : ORIGIN = S_RUNTIME_ITCM_START, LENGTH = S_RUNTIME_ITCM_SIZE
+#endif
 {% if outer_namespace.use_dtcm %}
   DTCM     (rw)  : ORIGIN = S_RUNTIME_DTCM_START, LENGTH = S_RUNTIME_DTCM_SIZE
 {% endif %}
@@ -204,6 +207,25 @@ SECTIONS
 {% endfor %}
     } > FLASH
 
+#ifdef S_RUNTIME_ITCM_START
+    /* Position tag: Start of SPM code (privileged) */
+    saved_location_counter = .;
+    . = ORIGIN(ITCM);
+    . = ALIGN(TFM_LINKER_SPM_CODE_ALIGNMENT);
+    Image$$PT_SPM_CODE_START$$Base = .;
+
+    .ER_SPM_CODE . :
+    {
+        *tfm_spm*:(SORT_BY_ALIGNMENT(.text*))
+        *tfm_spm*:(SORT_BY_ALIGNMENT(.rodata*))
+    } > ITCM AT > FLASH
+
+    /* Position tag: End of SPM code (privileged) */
+    . = ALIGN(TFM_LINKER_SPM_CODE_ALIGNMENT);
+    Image$$PT_SPM_CODE_END$$Base = .;
+    . = saved_location_counter;
+#endif
+
     .ARM.extab :
     {
         *(.ARM.extab* .gnu.linkonce.armextab.*)
@@ -256,6 +278,12 @@ SECTIONS
         LONG (ADDR(.ER_{{partition.manifest.name}}_DATA))
         LONG (SIZEOF(.ER_{{partition.manifest.name}}_DATA) / 4)    /* Aligment checked after the section */
 {% endfor %}
+
+#ifdef S_RUNTIME_ITCM_START
+        LONG (LOADADDR(.ER_SPM_CODE))
+        LONG (ADDR(.ER_SPM_CODE))
+        LONG (SIZEOF(.ER_SPM_CODE) / 4)
+#endif
 
 #ifdef S_RAM_CODE_START
         LONG (LOADADDR(.ER_CODE_SRAM))
