--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -38,6 +38,15 @@
 #define STACKSEAL_SIZE  0x0
 #endif
 
+{# Check whether DTCM needs to be included. #}
+{# We loop through here because break and continue are only available via the Loop Controls extension #}
+{% set outer_namespace = namespace(use_dtcm=false) %}
+{% for partition in partitions %}
+    {% if partition.manifest.place_in_dtcm %}
+        {% set outer_namespace.use_dtcm = true %}
+    {% endif %}
+{% endfor %}
+
 MEMORY
 {
   FLASH    (rx)  : ORIGIN = S_CODE_START, LENGTH = S_CODE_SIZE
@@ -45,6 +54,9 @@ MEMORY
 #ifdef S_RAM_CODE_START
   CODE_RAM (rwx) : ORIGIN = S_RAM_CODE_START, LENGTH = S_RAM_CODE_SIZE
 #endif
+{% if outer_namespace.use_dtcm %}
+  DTCM     (rw)  : ORIGIN = S_RUNTIME_DTCM_START, LENGTH = S_RUNTIME_DTCM_SIZE
+{% endif %}
 }
 
 #ifndef TFM_LINKER_VENEERS_START
@@ -509,6 +521,7 @@ SECTIONS
 #endif
 
 {% for partition in partitions %}
+    {% if not partition.manifest.place_in_dtcm %}
     {% if partition.manifest.type == 'PSA-ROT' %}
 
     /* Position tag: Start of PSA RoT partition's private data */
@@ -556,7 +569,68 @@ SECTIONS
     Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_END$$Base = .;
 
     {% endif %}
+    {% endif %}
 {% endfor %}
+
+{% if outer_namespace.use_dtcm %}
+    saved_location_counter = .;
+    . = ORIGIN(DTCM);
+{% endif %}
+
+{% for partition in partitions %}
+    {% if partition.manifest.place_in_dtcm %}
+    {% if partition.manifest.type == 'PSA-ROT' %}
+
+    /* Position tag: Start of PSA RoT partition's private data */
+    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
+    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_START$$Base = .;
+
+    .ER_{{partition.manifest.name}}_DATA . :
+    {
+    {% if partition.attr.linker_pattern.library_list %}
+        {% for pattern in partition.attr.linker_pattern.library_list %}
+        {{pattern}}:(SORT_BY_ALIGNMENT(.data*))
+        {% endfor %}
+    {% endif %}
+    {% if partition.attr.linker_pattern.object_list %}
+        {% for pattern in partition.attr.linker_pattern.object_list %}
+        {{pattern}}(SORT_BY_ALIGNMENT(.data*))
+        {% endfor %}
+    {% endif %}
+        *({{partition.manifest.name}}_PSA-ROT_ATTR_RW)
+        . = ALIGN(4);
+    } > DTCM AT > FLASH
+
+    .ER_{{partition.manifest.name}}_BSS ALIGN(4) (NOLOAD) :
+    {
+        start_of_{{partition.manifest.name}}_bss = .;
+    {% if partition.attr.linker_pattern.library_list %}
+        {% for pattern in partition.attr.linker_pattern.library_list %}
+        {{pattern}}:(SORT_BY_ALIGNMENT(.bss*))
+        {{pattern}}:(COMMON)
+        {% endfor %}
+    {% endif %}
+    {% if partition.attr.linker_pattern.object_list %}
+        {% for pattern in partition.attr.linker_pattern.object_list %}
+        {{pattern}}(SORT_BY_ALIGNMENT(.bss*))
+        {{pattern}}(COMMON)
+        {% endfor %}
+    {% endif %}
+        *({{partition.manifest.name}}_PSA-ROT_ATTR_ZI)
+        . += (. - start_of_{{partition.manifest.name}}_bss) ? 0 : 4;
+    } > DTCM
+
+    /* Position tag: End of PSA RoT partition's private data */
+    . = ALIGN(TFM_LINKER_PT_PROT_PART_PRIVATE_DATA_ALIGNMENT);
+    Image$$PT_{{partition.manifest.name}}_PRIVATE_DATA_END$$Base = .;
+
+    {% endif %}
+    {% endif %}
+{% endfor %}
+
+{% if outer_namespace.use_dtcm %}
+    . = saved_location_counter;
+{% endif %}
 
     .TFM_DATA ALIGN(4) :
     {
