FIH: Updates to the FIH library
This patch includes the following updates:
1- FIH updated to align with MCU boot's version. This provides
   improved fault mitigation measures.
2- Restructured FIH and removed redundancies. Now BL1 no longer
   maintains its own copy of FIH.
3- Cleaning up of the interfaces used for delay generation.
   BL1 now has a way to plug its delay generation logic into
   FIH for its own use without affecting the TFM as a second user.
4- Repurposed the tfm_fih_rng.c to tfm_fih_platform.c to group
   all platform specific code in this file. This helps avoid clutter
   and provides clear partition between generic and platform
   specific code.
5- FIH doesn't squash error codes anymore. There is an encode
   decode mechanism provided to recover the actual error code
   that caused the failure. Previously, all errors were squashed
   into FIH_FAILURE. This is no more the case.
6- Updated the platform CMake files to include platform specific
   FIH function definitions.

Signed-off-by: Umair Khan <umair.khan@arm.com>
Change-Id: I6ed7a0a038aef58cf4429133c2a3e1b01bbff60b

--- a/lib/fih/CMakeLists.txt
+++ b/lib/fih/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -8,10 +8,10 @@
 cmake_minimum_required(VERSION 3.21)
 
 add_library(tfm_fih_headers INTERFACE)
-add_library(tfm_fih STATIC)
+add_library(tfm_fih INTERFACE)
 
 target_sources(tfm_fih
-    PRIVATE
+    INTERFACE
         src/fih.c
 )
 
@@ -21,16 +21,10 @@ target_include_directories(tfm_fih_headers
 )
 
 target_link_libraries(tfm_fih
-    PUBLIC
+    INTERFACE
         tfm_fih_headers
         platform_common_interface
         cmsis
-)
-
-target_compile_definitions(tfm_fih_headers
-    INTERFACE
-        TFM_FIH_PROFILE_${TFM_FIH_PROFILE}
-        $<$<NOT:$<STREQUAL:${TFM_FIH_PROFILE},OFF>>:TFM_FIH_PROFILE_ON>
 )
 
 target_compile_options(tfm_fih_headers
