Build: ADAC: Workaround for fetch library failure
Without GIT_PROGRESS, the fetch_remote_library fails for ADAC
repository with below error:
```
-- Fetching latest from the remote origin
error: pathspec '8118fd2;;' did not match any file(s) known to git
CMake Error at ../build-spe/lib/ext/libpsaadac-subbuild/
    libpsaadac-populate-prefix/tmp/libpsaadac-populate-gitupdate.cmake:202
    (execute_process): execute_process failed command indexes:

    1: "Child return code: 1"
```
Until above issue is resolved, this commit adds GIT_PROGRESS to the
fetch_remote_library call for psa-adac to avoid the failure.

Signed-off-by: Jamie Bird <Jamie.Bird@arm.com>
Change-Id: I1df0f2ae7726cd72a9ae7495967aac094f4093ac

--- a/lib/ext/psa-adac/CMakeLists.txt
+++ b/lib/ext/psa-adac/CMakeLists.txt
@@ -16,6 +16,7 @@ fetch_remote_library(
     FETCH_CONTENT_ARGS
         GIT_TAG             ${PLATFORM_PSA_ADAC_VERSION}
         GIT_REPOSITORY      https://git.trustedfirmware.org/shared/psa-adac.git
+        GIT_PROGRESS        TRUE
 )
 
 if (NOT LIB_BINARY_PATH_VAR)
