LIB: Add generic endian.h
Add static inline functions for 16, 32, and 64-bit byte-swapping
(bswap_16, bswap_32, bswap_64) and macros for endianness
conversion (htobe16, htobe32, be16toh, be32toh).

The header is added to the new `lib/tfm_helper_lib` subdirectory, which
is intended for similar utility and helper functions for TF-M.

Change-Id: I459967c03b479bf4a18f57fb89c8706e8fc05320
Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ add_subdirectory(lib/fih)
 add_subdirectory(lib/tfm_log)
 add_subdirectory(lib/tfm_log_unpriv)
 add_subdirectory(lib/tfm_vprintf)
+add_subdirectory(lib/tfm_helper_lib)
 add_subdirectory(tools)
 add_subdirectory(secure_fw)
 add_subdirectory(interface)
