--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -100,6 +100,7 @@ target_link_libraries(platform_s
         cmsis_stack_override
         cmsis
         tfm_log_headers
+        tfm_helper_lib
         $<$<BOOL:${CONFIG_TFM_BACKTRACE_ON_CORE_PANIC}>:tfm_log_unpriv>
         $<$<BOOL:${CONFIG_TFM_BACKTRACE_ON_CORE_PANIC}>:tfm_log>
         $<$<BOOL:${CONFIG_TFM_BACKTRACE_ON_CORE_PANIC}>:tfm_backtrace>
