Build: CMSIS uses v6.2.0 and applies a patch
As GIT_SHALLOW can't be used using just commits, and there
is no tag available yet that includes a fix that is required
by TF-M to build correctly.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I3dc9a3032f93a68f52873c8f6d78abbaf3803678

--- a/lib/ext/cmsis/CMakeLists.txt
+++ b/lib/ext/cmsis/CMakeLists.txt
@@ -9,7 +9,7 @@ cmake_minimum_required(VERSION 3.21)
 
 # Default configuration of CMSIS repository
 set(CMSIS_PATH     "DOWNLOAD"       CACHE PATH      "Path to cmsis (or DOWNLOAD to fetch automatically")
-set(CMSIS_TAG      "964440d1"       CACHE STRING    "The version of cmsis to use")
+set(CMSIS_TAG      "v6.2.0"         CACHE STRING    "The version of cmsis to use")
 
 fetch_remote_library(
     LIB_NAME                cmsis
