cc3xx: Use endian.h instead of cc3xx_endian_helper.h
Link `tfm_helper_lib` to necessary targets, delete
`cc33xx_endian_helpers.h` and include `endian.h` for `bswap_*`
functions.

Copyright headers have also been updated.

Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>
Change-Id: Iada457be1805f82f32412b607ecdfc163fabac37

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -217,6 +217,7 @@ if(BL2)
             cmsis_stack_override
             cmsis
             tfm_log_headers
+            tfm_helper_lib
         PRIVATE
             bl2_crypto
             bl2_hal
@@ -275,6 +276,7 @@ if(BL1 AND PLATFORM_DEFAULT_BL1)
             platform_common_interface
             cmsis_stack_override
             cmsis
+            tfm_helper_lib
     )
 
     target_compile_definitions(platform_bl1_1_interface
@@ -377,6 +379,7 @@ if(BL1 AND PLATFORM_DEFAULT_BL1)
     target_link_libraries(platform_bl1_2
         PUBLIC
             platform_bl1_1_interface
+            tfm_helper_lib
         PRIVATE
             tfm_fih
             tfm_fih_headers
