Build: Remove references to local imgtool script
- Removed imgtool from tools/requirements.txt
- Removed bl2/ext/mcuboot/scripts/requirements.txt as it is unused
- Deleted the wrapper/ folder
- Updated installation instructions accordingly
- Fixed image signing script for mps4/corstone320

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Iefc772b7d12cb09bdc0e1ab78165f11b00506fe3

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -249,7 +249,7 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
         WORKING_DIRECTORY ${MCUBOOT_PATH}/scripts
 
         #Sign secure binary image with provided secret key
-        COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/scripts/wrapper/wrapper.py ${wrapper_args}
+        COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/scripts/wrapper.py ${wrapper_args}
         COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/tfm_s_signed.bin $<TARGET_FILE_DIR:bl2>
     )
 
