Platform: Consolidate boot measurement slot enum
Introduce a platform header to declare default enum for representing
boot measurement slots used by measured boot partition. Platform that
choose to use the default enum must define
`PLATFORM_DEFAULT_MEASUREMENT_SLOTS`. Alternatively, platforms can
provide a platform specific `boot_measurement.h` to supply definition
for `boot_measurement_slot_t` enum.

Enum `boot_measurement_slot_t` in `boot_measurement.h` for
Corstone1000 and RSE is now the platform default. Therefore, platform
specific copies of this file have been removed for these platforms and
`PLATFORM_DEFAULT_MEASUREMENT_SLOTS` has been turned on in their
respective `config.cmake`. Rp2350 supplied it's own enum definition,
hence, `PLATFORM_DEFAULT_MEASUREMENT_SLOTS` is turned off in it's
`config.cmake`.

Direct inclusion of platform specific `boot_measurement.h` is replaced
with `tfm_boot_measurement.h`.

Bump `tf-m-extras` SHA. DPE used `boot_measurement.h` but has been
patched to use `tfm_boot_measurement.h`

Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>
Change-Id: Ib9e66797031a61ab538b5104848b7892cc1307b4

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -448,6 +448,7 @@ target_compile_definitions(platform_region_defs
         $<$<BOOL:${TFM_BL1_1_MEASUREMENT_HASH_ALG}>:TFM_BL1_ENABLE_${TFM_BL1_1_ROTPK_HASH_ALG}>
         $<$<BOOL:${MCUBOOT_HW_KEY}>:MCUBOOT_HW_KEY>
         $<$<BOOL:${TFM_PXN_ENABLE}>:TFM_PXN_ENABLE>
+        $<$<BOOL:${PLATFORM_DEFAULT_MEASUREMENT_SLOTS}>:PLATFORM_DEFAULT_MEASUREMENT_SLOTS>
 )
 
 target_include_directories(platform_region_defs
