Build: Add pandas and numpy to Python deps
Used by `create_bl1_1_dma_bin.py`

Change-Id: I51e1a2cdfaf38177165938710c9736ed1c94b6a8
Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ dependencies = [
     "pyelftools (>=0.32,<0.33)",
     "rich (>=13.9.4,<14.0.0)",
     "libclang (>=18.1.1,<19.0.0)",
+    "pandas==2.3.1",
+    "numpy==2.2.6"
 ]
 
 [project.optional-dependencies]
