crypto: Update thin PSA Crypto layer with Key wrap API
* Add PSA Cipher APIs.
* Add key Wrap APIs.
* Add handling of symetric and opqaue keys.

Change-Id: Ic299452da096a932b64d2a8541b9fc39bd295a28
Signed-off-by: Waleed Elmelegy <waleed.elmelegy@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -422,6 +422,7 @@ target_compile_definitions(platform_region_defs
         DAUTH_${DEBUG_AUTHENTICATION}
         $<$<BOOL:${MCUBOOT_IMAGE_NUMBER}>:MCUBOOT_IMAGE_NUMBER=${MCUBOOT_IMAGE_NUMBER}>
         $<$<BOOL:${MCUBOOT_BUILTIN_KEY}>:MCUBOOT_BUILTIN_KEY>
+        $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:MCUBOOT_ENC_IMAGES>
         $<$<STREQUAL:${SIG_TYPE},RSA>:MCUBOOT_SIGN_RSA>
         $<$<STREQUAL:${SIG_TYPE},RSA>:MCUBOOT_SIGN_RSA_LEN=${SIG_LEN}>
         $<$<STREQUAL:${SIG_TYPE},EC>:MCUBOOT_SIGN_EC${SIG_LEN}>
