Add APIs to select code KEK for Encrypted images
* Add one generic API that uses static keys in
  BL2 image.
* Add RSE specific API that select keys in the KMU.

Change-Id: Ic387c8bd5dabb3d190ccb30b9d670eec3d53cedc
Signed-off-by: Waleed Elmelegy <waleed.elmelegy@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -76,9 +76,11 @@ set(BL2_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/bl2_main.c
     ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_extended.c
     ${CMAKE_CURRENT_SOURCE_DIR}/flash_map_legacy.c
-    $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:${CMAKE_CURRENT_SOURCE_DIR}/keys_enc.c>
-
 )
+
+if(PLATFORM_DEFAULT_IMAGE_ENCRYPTION)
+list(APPEND BL2_SOURCES $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:${CMAKE_CURRENT_SOURCE_DIR}/keys_enc.c>)
+endif()
 
 if(PLATFORM_DEFAULT_ROTPK)
     if(MCUBOOT_BUILTIN_KEY)
