Linker: Align the size of BSS to a multiple of 4 bytes
As this a constraint of the initialisation code

Change-Id: Iee0100bffb77e197bc9096fc83a14b6bd24bf954
Signed-off-by: Raef Coles <raef.coles@arm.com>

--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -646,6 +646,7 @@ SECTIONS
     {% endif %}
         *({{partition.manifest.name}}_PSA-ROT_ATTR_ZI)
         . += (. - start_of_{{partition.manifest.name}}_bss) ? 0 : 4;
+        . = ALIGN(4);
     } > DTCM
 
     /* Position tag: End of PSA RoT partition's private data */
