Add checks for BL2 and TF-M binary address alignment
Add relevant checks in GCC linker scripts to validate if the
BL2 and TF-M binary addresses are aligned to 0x100 byte boundary
for Cortex-M0+ based platforms.

Change-Id: I407d0343215fee2fc3e85379d05662bf1d090fcf
Signed-off-by: Harsimran Singh Tungal <harsimransingh.tungal@arm.com>

--- a/platform/ext/common/gcc/tfm_common_s.ld.template
+++ b/platform/ext/common/gcc/tfm_common_s.ld.template
@@ -38,6 +38,14 @@ MEMORY
 #endif
 }
 
+/* For Cortex-M0+ VTOR: 256-byte vector table is at the offset 0x00 of the image.
+ * To keep that table in one block, the image base must be a multiple of 0x100.
+ * For reference: https://developer.arm.com/documentation/ddi0419/latest/
+ */
+#if defined(__ARM_ARCH_6M__)
+CHECK_ALIGNMENT_256(S_CODE_START)
+#endif
+
 #ifndef TFM_LINKER_VENEERS_START
 #define TFM_LINKER_VENEERS_START ALIGN(TFM_LINKER_VENEERS_ALIGNMENT)
 #endif
