Docs: Update dependency installation method for readthedocs
`pyproject.toml` include list of optional dependencies for docs. All
python dependencies are managed by this single source of truth, as
`requirements.txt` will get deprecated in TF-M.

Change-Id: I2f4c094e7f34bc4d7be18fa7c5f10db97926ffe3
Signed-off-by: Mudit Sharma <mudit.sharma@arm.com>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -32,4 +32,7 @@ formats:
 # Configuration of the Python environment
 python:
    install:
-   - requirements: docs/requirements.txt
+       - method: pip
+         path: .
+         extra_requirements:
+             - docs
