--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -251,7 +251,10 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
         set(wrapper_args ${wrapper_args} -k ${MCUBOOT_KEY_NS})
     endif()
 
+    get_target_property(bin_dir bl2 RUNTIME_OUTPUT_DIRECTORY)
+
     add_custom_command(OUTPUT tfm_s_signed.bin
+        OUTPUT ${bin_dir}/tfm_s_signed.bin
         DEPENDS tfm_s_bin signing_layout_s
         DEPENDS $<IF:$<BOOL:${MCUBOOT_GENERATE_SIGNING_KEYPAIR}>,generated_private_key,>
         DEPENDS $<$<BOOL:${MCUBOOT_ENC_IMAGES}>:${MCUBOOT_KEY_ENC_NS}>
@@ -259,7 +262,7 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
 
         #Sign secure binary image with provided secret key
         COMMAND  mcuboot_imagesign_wrapper ${wrapper_args}
-        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/tfm_s_signed.bin $<TARGET_FILE_DIR:bl2>
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/tfm_s_signed.bin ${bin_dir}
     )
 
     set(IMAGE_TYPE "NS_IMAGE")
